# SPEA_Lab_IoT

./: .gitignore  README.md  example.env  pyproject.toml  start_lab.py  test_r4.py  test_rotation_dh.py
docs/: MQTT_DEMO.md  R1_DEVICE_PLATFORM.md  R2-R3_KEY_MANAGEMENT.md  R2_KEY_MANAGEMENT.md  R4_KEY_AGREEMENT.md  R5_DATA_ENCRYPTION.md  RELEASE_VERSION.md
src/.keys/: sensor-keypad-01.keys
src/mqqt_demo/: mqtt_sensor.py  mqtt_subscriber.py
src/mqtt_demo/: __init__.py
src/scripts/: run_device_wrapper.py  run_platform_wrapper.py
src/spea_lab_iot/: __init__.py  config.py  dashboard.py  device.py  device_keypad.py  device_menu.py  device_no_ui.py  device_screen.py  dh_device.py  dh_platform.py  feed_subscriber.py  key_agreement.py  key_manager.py  main.py  platform.py  server.py
