[project]
name = "spea-lab-iot"
version = "0.1.0"
description = "SPEA Lab IoT project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spea_lab_iot"]

[tool.ruff]
line-length = 88
target-version = "py311"
